Fix layout issue with buttons on product detail page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -381,3 +381,10 @@ a:hover{
         margin-bottom: 82px;
     }
 }
+
+@media (min-width:769px)and(max-width:1119px){
+    #keep-shopping,
+    #add-basket{
+        font-size: 1rem !important;
+    }
+}
